2005-12-11 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: version 2-4-5-2

2005-11-08 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: version 2-4-5-0
	* PRE_BUILD: use unpack_file

2005-09-27 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: version 2-4-4-0

2005-09-26 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: version 2-4-3-0

2005-08-13 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: revert to version 2-3-5-0
	* INSTALL: add TRACK_ROOT

2005-07-29 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: version 2-4-0-1

2004-10-30 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: version 2-3-5-0

2004-09-29 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: version 2-3-4-0

2004-09-06 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: version 2-3-1-1

2004-07-27 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: version 2-3-1-0-rc1

2004-07-09 Treeve Jelbert <treeve01@pi.be>
	* DEPENDS: add g++

2004-06-25 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: BUILD_API=2
	* BUILD: strip
	  add -lpthread to LDFLAGS
	* INSTALL: add

2004-05-11 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: version 2-3-0-0

2003-12-26 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: version 2-2-2-3
	* BUILD, DEPENDS: added
	  spell created
