@@ -1,3 +1,3 @@
-  sedit "s@/local@@;s/-O3/$CFLAGS/" Makefile  &&
-  LDFLAGS="${LDFLAGS} -lpthread"              &&
-  make IBPP_GCC=1
+  mkdir build  &&
+  cd core      &&
+  make all
