@@ -1,13 +1,13 @@
            SPELL=ibpp
-         VERSION=2-4-5-2
-     SOURCE_HASH=sha512:37b38c56f74db0bb9622af69d45321d6b4a5ef4e7fa4665a73f6bab36f57b9dce7e64403271c50d36dad09428acc61c89fe1786fdbb7d66ea931fbaaf72eede4
+         VERSION=2-5-0-0
+     SOURCE_HASH=sha512:4af8ea235c95614f5d5beaef3b98e88ec75269cc25329e9271302d06b082077a4f276c481de4040aeafc1975d8f9d67a468ae0df9bdb9ed09eca1e443c84ee73
        BUILD_API=2
           SOURCE=$SPELL-$VERSION-src.zip
 SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL
         WEB_SITE=http://www.ibpp.org
    SOURCE_URL[0]=$SOURCEFORGE_URL/$SPELL/$SOURCE
           LICENSE=MPL
-	    DOCS="*.txt tests/*"
+	    DOCS=""
           ENTERED=20031226
           UPDATED=20041030
 SHORT="C++ classes to access and administer a Firebird database"
