@@ -1,2 +1,6 @@
-  cp release/linux/*.{so,a} $TRACK_ROOT/usr/lib/		&&
-  cp ibpp.h $TRACK_ROOT/usr/include
+  cd $SOURCE_DIRECTORY               &&
+  DEST=$TRACK_ROOT/usr/share/ibpp    &&
+  mkdir -p $DEST                     &&
+  cp -r *.txt core $DEST             &&
+  cp build/*.{so,a} $TRACK_ROOT/usr/lib/  &&
+  cp core/ibpp.h $TRACK_ROOT/usr/include
