@@ -1,3 +1,4 @@
 mk_source_dir 			&&
 cd $SOURCE_DIRECTORY		&&
-unpack_file 
+unpack_file                     &&
+cp $SPELL_DIRECTORY/Makefile core
