@@ -1,3 +1,10 @@
+2006-03-02 Treeve Jelbert <treeve01@pi.be>
+	* DETAILS: version 2-5-0-0
+	* BUILD INSTALL: adjust to new ibpp policy (also install source files)
+	* PRE_BUILD: copy makefile
+	* Makefile: add (derived from previous released version)
+	  ibpp no longer provides a makefile
+
 2005-12-11 Treeve Jelbert <treeve01@pi.be>
 	* DETAILS: version 2-4-5-2
 
